--- a/Öffnungszeiten.html
+++ b/Öffnungszeiten.html
@@ -94,6 +94,8 @@
 <br>*Karte Paulinenstraße*&nbsp;&nbsp;</p>
                             </div>
                         </div>
+                      <iframe width="420" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=420&amp;height=300&amp;hl=en&amp;q=Paulinenstra%C3%9Fe%2016%20Friedrichshafen+(Paulinenstra%C3%9Fe)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+ <script type='text/javascript' src='script.js?id=bc03857882bfdf5a5c4e01e69898653069347d87'></script>
                     </div>
                     <div id="tab2" class="tab-pane" role="tabpanel">
                         <div class="row">
