--- a/Team.html
+++ b/Team.html
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="team1 cid-s9ZigifSVA" id="team1-2r">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="team1 cid-s9ZigifSVA" id="team1-2r">
     
 
     
